Fixed css to make page visible in mobile devices

--- a/src/styles/Common.css
+++ b/src/styles/Common.css
@@ -3,7 +3,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 100dvh;
   background-color: #402E7A;
   background-color: #4B70F5;
   color: #fff;
